12/6 didnt like my response ig D:

--- a/_notebooks/2023-12-05-Benefitial_and_Harmful.ipynb
+++ b/_notebooks/2023-12-05-Benefitial_and_Harmful.ipynb
@@ -215,57 +215,22 @@
    "source": [
     "(Homework right here)\n",
     "\n",
-    "u never said i couldnt do this right\n",
+    "https://dino596.github.io/frontend2.0/calculator_base.html\n",
     "\n",
-    "Artificial Intelligence (AI) has brought about numerous benefits and advancements across various industries, but it also raises concerns about potential harmful effects. Let's explore both aspects:\n",
+    "our project ig\n",
     "\n",
-    "Benefits of AI:\n",
-    "Automation and Efficiency:\n",
+    "### benefits\n",
+    "- its very useful as a programmer calculator\n",
+    "- can convert decimal to bases and handle special operations such as binary bit shifts and logic gates\n",
+    "- it looks cool too imo (it even has hover animation :O)\n",
+    "- and it works for the most part\n",
     "\n",
-    "AI enables automation of repetitive and mundane tasks, leading to increased efficiency and productivity.\n",
-    "Businesses can streamline their operations, reduce costs, and allocate resources more effectively.\n",
-    "Data Analysis and Insights:\n",
-    "\n",
-    "AI excels at processing and analyzing large datasets quickly, helping organizations derive meaningful insights and make informed decisions.\n",
-    "This capability is particularly valuable in fields such as finance, healthcare, and marketing.\n",
-    "Personalization:\n",
-    "\n",
-    "AI algorithms can analyze user behavior and preferences to provide personalized recommendations and experiences, enhancing customer satisfaction.\n",
-    "This is evident in services like streaming platforms, e-commerce, and social media.\n",
-    "Medical Advances:\n",
-    "\n",
-    "AI contributes to medical research, diagnostics, and personalized medicine, accelerating the discovery of new treatments and improving patient care.\n",
-    "It aids in the interpretation of medical images, drug discovery, and genetic analysis.\n",
-    "Natural Language Processing (NLP):\n",
-    "\n",
-    "NLP enables machines to understand and generate human-like language, leading to advancements in virtual assistants, language translation, and chatbots.\n",
-    "Communication barriers are reduced, fostering global collaboration.\n",
-    "Predictive Maintenance:\n",
-    "\n",
-    "AI helps in predicting equipment failures and optimizing maintenance schedules, reducing downtime and extending the lifespan of machinery in various industries.\n",
-    "Harmful Effects of AI:\n",
-    "Job Displacement:\n",
-    "\n",
-    "Automation driven by AI can lead to job displacement, particularly in industries where routine tasks are easily automated.\n",
-    "There are concerns about the need for retraining and upskilling the workforce for jobs that require a more human touch.\n",
-    "Bias and Fairness:\n",
-    "\n",
-    "AI algorithms may inadvertently perpetuate or even amplify existing biases present in training data, leading to biased decision-making.\n",
-    "This can result in unfair treatment of certain groups of people, exacerbating societal inequalities.\n",
-    "Privacy Concerns:\n",
-    "\n",
-    "The widespread use of AI in surveillance, facial recognition, and data analysis raises concerns about privacy infringement.\n",
-    "Striking a balance between technological advancement and protecting individual privacy remains a significant challenge.\n",
-    "Security Risks:\n",
-    "\n",
-    "AI systems can be vulnerable to attacks, and the malicious use of AI poses security risks, including data breaches and manipulation of information.\n",
-    "Ensuring the security of AI systems is crucial to prevent unintended consequences.\n",
-    "Ethical Dilemmas:\n",
-    "\n",
-    "As AI becomes more sophisticated, ethical concerns arise, such as the use of AI in autonomous weapons, decision-making in critical situations, and the potential for AI to surpass human intelligence.\n",
-    "Dependency and Lack of Human Touch:\n",
-    "\n",
-    "Overreliance on AI in decision-making processes can lead to a lack of human oversight and the erosion of the human touch in various interactions, impacting empathy and understanding."
+    "### drawbacks\n",
+    "- u can only input decimal, not the other bases\n",
+    "- this means that u cant convert from other bases to decimal, only decimal to binary\n",
+    "- it has a boring background: we were gonna had an animating background but couldnt get it to work sooo\n",
+    "- cant handle negative numbers bc negative numbers w other bases is too confusing and it depends on the allocated memory of the program\n",
+    "\n"
    ]
   },
   {
