12/13 finished undecidable hw

--- a/_notebooks/2023-12-6-TeamTeach.ipynb
+++ b/_notebooks/2023-12-6-TeamTeach.ipynb
@@ -102,6 +102,8 @@
     "## POPCORN HACK, Create your own undecidable problem\n",
     "    Create a problem that is unsolvable by any single algorithim, for example, this problem could have infinite possibilities\n",
     "\n",
+    "the sum of all prime numbers\n",
+    "\n",
     "### Example \n",
     "#### The \"Infinite Sum Sequence Problem (ISSP)\"\n",
     "    Problem Statement: Given an infinite sequence of positive integers, can it be determined whether there exists a subsequence that sums up to a specific target value?\n",
@@ -139,7 +141,7 @@
     "\n",
     "D) Tiling Problems can only be solved for regular polygons.\n",
     "\n",
-    " \n",
+    "C,  \n",
     "\n",
     "### Word Problem for Groups\n",
     "What is the core issue represented by the Word Problem for Groups?\n",
@@ -205,7 +207,6 @@
     "D) Rice's Theorem describes the limitations of parallel computing.\n",
     "\n",
     "\n",
-    "\n",
     "### Emptiness Problem for Turing Machines\n",
     "What does the Emptiness Problem for Turing Machines aim to determine?\n",
     "\n",
@@ -218,7 +219,6 @@
     "D) It examines whether a Turing machine can accept an infinite sequence of input.\n",
     "\n",
     "\n",
-    "\n",
     "### The Entscheidungsproblem\n",
     "Which problem was famously formulated by David Hilbert and aimed to find a procedure that could decide the truth of any mathematical statement?\n",
     "\n",
@@ -228,8 +228,24 @@
     "\n",
     "C) The Entscheidungsproblem.\n",
     "\n",
-    "D) Goldbach's Conjecture.\n"
+    "D) Goldbach's Conjecture.\n",
+    "\n",
+    "\n",
+    "1. C\n",
+    "2. C\n",
+    "3. B\n",
+    "4. C\n",
+    "5. C\n",
+    "6. C\n",
+    "7. B\n",
+    "8. A\n",
+    "9. C"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
